--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -166,28 +166,29 @@ html
       form(action="", method="post") {% csrf_token %}
         #profile
           #pic
-          h1 {{ event_obj.host.full_name }}
-        textarea#eventtitle.input-area(type="text", name='eventtitle', placeholder="活動標題", maxlength="8")
+          h1 {{ user.username }}
+        {{ form.as_p }}
+        //- textarea#eventtitle.input-area(type="text", name='eventtitle', placeholder="活動標題", maxlength="8")
         
-        ul
-          li
-            a.tag tag1
-          li
-            a.tag tag2
-          li
-            a.tag tag3
-          li
-            a.tag tag4
-          li
-            a.tag tag5
-          li
-            p#plus +
+        //- ul
+        //-   li
+        //-     a.tag tag1
+        //-   li
+        //-     a.tag tag2
+        //-   li
+        //-     a.tag tag3
+        //-   li
+        //-     a.tag tag4
+        //-   li
+        //-     a.tag tag5
+        //-   li
+        //-     p#plus +
 
-        textarea#eventsubtitle.input-area(type="text", name='eventsubtitle', placeholder="副標題", maxlength="20")
-        textarea#eventdescription.input-area(placeholder="內容描述")
+        //- textarea#eventsubtitle.input-area(type="text", name='eventsubtitle', placeholder="副標題", maxlength="20")
+        //- textarea#eventdescription.input-area(placeholder="內容描述")
 
         #buttons
-          img#submit-btn(src="{% static 'file/submitbtn.png' %}")
+          input#submit-btn(type="image" src="{% static 'file/submitbtn.png' %}" alt="Submit Form")
           //img#vector(src="{% static 'file/vectoricon.png' %}")
           //p#submit 發佈
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
