--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -25,7 +25,6 @@
 body
   background-color: #FAAD95
 
-//<<<<<<< HEAD
 #container
   position: fixed
   transform: translate(-50%, 0)
@@ -352,9 +351,10 @@ body
   
   #profile
     display: flex
-    margin: 1vw 0 1vw 3.5vw
+    margin: 1vw 0
     height: 4vw
-    
+    margin: 0 0 1vw 3.5vw
+        
     #pic
       height: 4vw
       width: 4vw
@@ -367,7 +367,41 @@ body
       line-height: 4vw
       //transform: translate(0, -50%)
       margin-left: 1vw
+  
+  label
+    display: none
+  input
+    margin: 0 0 0 3.5vw
+  textarea
+    margin: 0 0 0 3.5vw
+  
+  p:nth-child(3)
+    background-color: red
+    input:nth-child(2)
+      background-color: yellow
+        
+    input:nth-child(1)
       
+    
+  p:nth-child(4)
+    background-color: blue
+    
+  p:nth-child(5)
+    background-color: green
+    
+  p:nth-child(6)
+    background-color: red
+    
+  p:nth-child(7)
+    background-color: blue
+    
+  p:nth-child(8)
+    background-color: green
+    
+  #id_title
+    font-size: 2vw
+  
+  
   ul
     display: flex
     //justify-content: space-around
@@ -431,7 +465,6 @@ body
 #filter1
   display: none
 #eventwindow
-  display: none
+  display: block
 #eventcreatewindow
-  display: none
-//>>>>>>> 624262fa0fa70d15c8079445b5ad13cd4ca108c8
+  display: block
