--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -14,23 +14,28 @@ html
 
   body
     #intro 
+      #info
+        #user-img
+        #user-name 張天豪
+        #school-info
+          #department 電機工程學系
+          #grade 四年級
+      #description-tag
+        #description-background
+          p#description 嗨大家好我是天豪，我很喜歡去爬山還有去costco買菜，我應該算好相處，歡迎大家跟我一起去好市多
+        .tag-field
+          p 個性
+          .tags#personality-tag 
+        .tag-field
+          p 專長
+          .tags#skill-tag
+        .tag-field 
+          p 有興趣活動
+          .tags#interested-tag
 
-      #user-img
-      #user-name 張天豪
-      #department 電機工程學系
-      #grade 四年級
-
-      p#description 嗨大家好我是天豪，我很喜歡去爬山還有去costco買菜，我應該算好相處，歡迎大家跟我一起去好市多
-      p 個性
-      .tags#personality-tag 
-      p 專長
-      .tags#skill-tag 
-      p 有興趣活動
-      .tags#interested-tag
-
-      #buttons  
-        input(type="button", value="建立連結")
-        input(type="button", value="傳訊息")
+        #buttons  
+          input(type="button", value="建立連結")
+          input(type="button", value="傳訊息")
 
     #left-pane 
       p 聯絡人
