--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -105,8 +105,19 @@ body
           margin-bottom: 0.5vw
           padding: 1vw
           width: calc(100%-4vw)
+          display: flex
+          flex-direction: row
           p
             font-size: 1vw
+            margin-right: 2vw
+            top: 50%
+          .tag-style
+            background-color: #FFCFBF
+            border-radius: 1.5vw
+            padding: 0.5vw
+            margin-right: 0.5vw
+            p
+              margin-right: 0.5vw
         
         #buttons
           *
