modify profile page

--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -68,10 +68,19 @@ html
           .tags#personality-left
 
         #right-pane
+          #indextag
+            #tag1.tag
+            #tag2.tag
+            #tag3.tag
+            #tag4.tag
+            #tag5.tag
+        
           #tab-navbar
             input(type="button", value="參與活動")
             input(type="button", value="參與專案")
             input(type="button", value="個人專案")
+            input(type="button", value="...")
+            input(type="button", value="...")
 
           #activities
             #activity-cards-panel
