--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -85,7 +85,47 @@ body
       width: 60%
     #line2
       width: 5%
-      
+  #board
+    flex-direction: row
+    justify-content: flex-start
+    align-items: center
+    background-color: red
+    width: 100%
+    height: 7vw
+    border-radius: 3vw  
+    z-index: 0
+
+    #postwrapper
+    #postype
+      height: 13vw
+      width: 15vw
+      border-radius: 1.2vw
+      background-color: blue
+      z-index: 2
+      #mark
+        margin
+        border-radius: 15px
+        background-color: yellow
+        
+        img 
+          width: 17px
+          height: 17px
+      #title
+        font-size: 20px;
+      #subtitle
+        font-size: 16px;
+      #attachpic
+
+        
+      #likebutton
+        img
+          width: 20px
+          height: 20px
+      #comment
+        img
+          width: 20px
+          height: 20px
+    
         
 
 #gotop 
