--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -35,9 +35,9 @@ body
   flex-wrap: wrap
   align-content: space-around
   
-  width: 70%
+  width: 75%
   height: auto
-  top: 15%
+  top: 10%
   left: 50%
   background-color: green
 
@@ -50,6 +50,7 @@ body
     width: 100%
     height: 7vw
     border-radius: 2vw
+    margin-bottom: 15px
     
     #userpic
       margin: 0 2vw 0 3vw
@@ -91,30 +92,35 @@ body
     align-items: center
     background-color: red
     width: 100%
-    height: 7vw
     border-radius: 3vw  
     z-index: 0
 
     #postwrapper
-    #postype
       height: 13vw
       width: 15vw
       border-radius: 1.2vw
       background-color: blue
       z-index: 2
+    #postype
+      
       #mark
         margin
-        border-radius: 15px
+        width: 1.7vw
+        border-radius: 2vw
         background-color: yellow
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
         
         img 
           width: 17px
           height: 17px
       #title
-        font-size: 20px;
+        font-size: 20px
       #subtitle
-        font-size: 16px;
+        font-size: 16px
       #attachpic
+        img
+          width: 4vw
+          height: 4vw
 
         
       #likebutton
