separate event detail with homepage, add like button suppot, TODO: modify button image

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -127,6 +127,7 @@ body
         img
           width: 20px
           height: 20px
+        
       #comment
         img
           width: 20px
@@ -311,7 +312,12 @@ body
       bottom: 1vw
       height: 3vw
       width: 3vw
-      
+      form
+        button
+          background: url('../file/like-n.png')
+          width: 20px
+          height: 20px
+    
       #like-y
         display: none
         width: 100%
