--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -24,7 +24,7 @@
   margin: 0
 
 body
-  background-color: #FAAD95
+  background-color: white
   width: 100%
   height: 100%
   
@@ -57,33 +57,37 @@ body
       justify-content: space-around
       background-color: #FFCFBF
       border-radius: 3vw
-      width: calc(100%-3vw)
+      width: auto
       padding: 1.5vw
       
       #info
         display: flex
         flex-direction: column
-        justify-content: space-between
+        justify-content: space-start
         align-items: center
         
         #user-img
           width: 13vw
           height: 13vw
           border-radius: 50%
-          background-color: red
+          border: 3px
+          border-color: pink
+          background-color: white
           margin-bottom: 0.5vh
         #user-name
           font-size: 2vw
-          margin-bottom: 0.5vh
+          margin-top: 0.5vw
+          margin-bottom: 0.5vw
         #school-info
           display: flex
           flex-direction: row
           margin-bottom: 5%
           #department
-            font-size: 1.3vw
+            font-size: 1.2vw
             margin-right: 0.5vw
           #grade
-            font-size: 1.3vw
+            font-size: 1vw
+            line-height: 1.2vw
       
       #description-tag
         display: flex
@@ -93,34 +97,39 @@ body
         
         #description-background
           background-color: white
-          border: solid 2px
+          //border: solid 2px
           border-radius: 2vw
-          border-color: #3AEDC2
+          //border-color: #3AEDC2
           padding: 2vw 1vw
-          width: calc(100%-4vw)
+          width: auto
           margin-bottom: 0.5vw
           p
             font-size: 1vw
+            padding-left: 0.5vw
         
         .tag-field
           background-color: white
           border-radius: 1.5vw
           margin-bottom: 0.5vw
-          padding: 1vw
-          width: calc(100%-4vw)
+          padding: 0.5vw
+          width: auto
           display: flex
           flex-direction: row
+          flex-wrap: wrap
           p
-            font-size: 1vw
-            margin-right: 2vw
+            
+            font-size: 0.9vw
+            margin: 0 0.5vw
+            padding: 0.3vw
             top: 50%
           .tag-style
             background-color: #FFCFBF
-            border-radius: 1.5vw
-            padding: 0.5vw
+            border-radius: 1vw
             margin-right: 0.5vw
-            p
-              margin-right: 0.5vw
+        
+        .tag-field:nth-child(4)
+          .tag-style
+            background-color: #75E1C7
         
         #buttons
           *
@@ -132,7 +141,7 @@ body
             margin: 0.5vw 0 0 0
             float: right
             border: solid 2px
-            background-color: #FFCFBF
+            background-color: #FDF2EF
             border-color: var(--color-main)
             
 
@@ -145,7 +154,7 @@ body
   justify-content: space-between
   width: 100%
   height: 100vw
-  background-color: purple
+  //background-color: purple
 
   #left-pane
     display: flex
@@ -157,21 +166,56 @@ body
     left: 20%
     width: 21%
     height: auto
-    background-color: #FFCFBF
+    background-color: white
     border-radius: 1.5vw
     padding: 1.5vw 1vw
+    border: solid 2px
+    border-color: #FFCFBF
     
-    #divider1
-      background-color: black
+    .left-region
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+      align-content: flex-start
+      justify-content: flex-start
+      align-items: flex-start
+      margin: 0.2vw 0
+      p
+        font-size: 0.8vw
+  
+    .tag-style
+      background-color: #FFCFBF
+      border-radius: 1.5vw
+      margin-right: 0.5vw
+      margin: 0.2vw
+      p
+        font-size: 0.8vw
+        margin: 0 0.2vw
+        padding: 0.3vw
+        top: 50%
+            
+    #interest
+      .tag-style
+        background-color: #75E1C7
+      
+    .lefthr
+      background-color: #FAAD95
       align: center
       height: 1px
       width: 100%
       margin: 10px 0
       border: none
       
+    #friends-avatar
+      display: flex
+      
+      .friend-img
+        width: 2vw
+        height: 2vw
+        border-radius: 50%
     
   #right-pane
-    background-color: pink
+    background-color: #FFE4DC
     width: 73%
     border-radius: 1.5vw
     //padding: 0 1vw 1.5vw 1vw
@@ -183,19 +227,22 @@ body
       flex-direction: row
       align-items: flex-end
       justify-content: space-between
-      
+      background-color: white
       z-index: 0
       
       .tag
         width: 20%
         height: 100%
-        background-color: #FDF2EF
-        opacity: 0.2
+        background-color: white
+        opacity: 1
         z-index: 0
+        border: solid 2px
+        border-color: #FFE4DC
         border-radius: 1vw 1vw 0 0
+        //box-shadow: 1px 0px 2px #FF79BC
                 
       .tag:nth-child(1)
-        opacity: 1
+        background-color: #FFE4DC
         
     #tab-navbar
       position: relative
@@ -212,15 +259,30 @@ body
         border: none
         background-color: transparent
         
+    .page
+      margin: 0 1.5vw 1.5vw 1.5vw
+      display: flex
+      flex-direction: column
+      flex-wrap: nowrap
+      justify-content: flex-start
+      align-items: center
+      
+    .card-panel
+      width: 95%
+      //height: 20vw
+      margin-bottom: 1vw
+      padding: 1vw
+      background-color: white
+      border-radius: 1vw
+      
+      .panel-img
+        width: 10vw
+        padding-top: 10vw
+        background-color: red
         
-    #activities
-      margin: 0 1.5vw 1.5vw 1.5vw
-      
-    #projects
-      margin: 0 1.5vw 1.5vw 1.5vw
-      
-    #personal
-      margin: 0 1.5vw 1.5vw 1.5vw
+      p
+        position: relative
+        left: 50%
 
 //phone responsive
 @media only screen and (max-width: 450px)
